# al-arr-sync

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  config.ini.example  pyproject.toml
al_arr_sync/: __main__.py  anilist.py  config.py  radarr.py  sonarr.py  types.py
